payload/workloads/advent-wollbi/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: advent-wollbi
  labels:
    name: advent-wollbi
